@@ -2,7 +2,11 @@
 
 namespace de\malkusch\autoloader\test\ns\bracket {
 
-    class Test {
+    class Test1 {
+
+    }
+
+    class Test2 {
 
     }
 
