@@ -2,8 +2,11 @@
 
 namespace de\malkusch\autoloader\test\ns\multibracket\A {
 
-    class Test {
+    class Test1 {
 
+    }
+
+    class Test2 {
 
     }
 
@@ -12,8 +15,11 @@ namespace de\malkusch\autoloader\test\ns\multibracket\A {
 
 namespace de\malkusch\autoloader\test\ns\multibracket\B {
 
-    class Test {
+    class Test1 {
 
+    }
+
+    class Test2 {
 
     }
 
