@@ -2,15 +2,21 @@
 
 namespace de\malkusch\autoloader\test\ns\multinobracket\A;
 
-class Test {
+class Test1 {
 
+}
+
+class Test2 {
 
 }
 
 
 namespace de\malkusch\autoloader\test\ns\multinobracket\B;
 
-class Test {
+class Test1 {
 
+}
+
+class Test2 {
 
 }
