@@ -2,6 +2,10 @@
 
 namespace de\malkusch\autoloader\test\ns\nobracket;
 
-class Test {
+class Test1 {
+
+}
+
+class Test2 {
 
 }
